add login & delete unnecessary code
