# backend/service/auth/types.go
@@ -1,0 +1,7 @@
+package auth
+
+type Auth struct {
+	UserID   string `json:"user_id"`
+	FullName string `json:"full_name"`
+	Email    string `json:"email"`
+}
